@@ -1,4 +1,4 @@
-﻿/*! ************************************************************************
+/*! ************************************************************************
 The MIT License (MIT)
 Copyright (c)2017 Atom Software Studios. All rights reserved.
 
